--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     
     testCompile 'junit:junit:4.12'    
+    testCompile 'cglib:cglib:3.1'
     testCompile 'org.mockito:mockito-core:2.7.22'
+    
+    testCompile 'org.powermock:powermock:1.6.5'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.4'
+    testCompile 'org.powermock:powermock-api-mockito2:1.7.1'
+
+    
+    
 }
 
